# tinycv

./: .clang-format  .cmake-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
cmake/: arm.cmake  benchmark.cmake  common.cmake  deps.cmake  opencv.cmake  tinycv-config.cmake.in  unittest.cmake  x86.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake
include/tinycv/: copymakeborder.h  cvtcolor.h  flip.h  resize.h  types.h
src/tinycv/: benchmark_main.cc  debug.h  sys.cpp  sys.h
src/tinycv/arm/: bgr2bgra.cpp  bgr2bgra_benchmark.cpp  bgr2bgra_unittest.cpp  bgr_nv.cpp  bgr_nv_benchmark.cpp  bgr_nv_unittest.cpp  bgr_yuv420.cpp  bgr_yuv420_benchmark.cpp  bgr_yuv420_unittest.cpp  color2gray.cpp  color2gray_benchmark.cpp  color2gray_unittest.cpp  color_yuv.hpp  color_yuv_simd.cpp  color_yuv_simd.hpp  copymakeborder.cpp  copymakeborder_benchmark.cpp  copymakeborder_unittest.cpp  flip.cpp  flip_benchmark.cpp  flip_unittest.cpp  operation_utils.hpp  resize_benchmark.cpp  resize_fp32.cpp  resize_u8.cpp  resize_unittest.cpp  sysinfo.cpp  sysinfo.h  test.h  typetraits.hpp
src/tinycv/x86/: bgr_nv.cpp  bgr_nv_benchmark.cpp  bgr_nv_unittest.cpp  bgr_yuv420.cpp  bgr_yuv420_benchmark.cpp  bgr_yuv420_unittest.cpp  color_gray.cpp  color_gray_benchmark.cpp  color_gray_unittest.cpp  copymakeborder_benchmark.cpp  copymakeborder_unittest.cpp  flip.cpp  flip_benchmark.cpp  flip_unittest.cpp  intrinutils.hpp  resize_benchmark.cpp  resize_linear_fp32.cpp  resize_linear_u8.cpp  resize_nearest_fp32.cpp  resize_nearest_u8.cpp  resize_unittest.cpp  sysinfo.cpp  sysinfo.h  test.h  util.hpp
src/tinycv/x86/avx/: bgr_gray_avx.cpp  bgr_i420_avx.cpp  bilateral_avx.cpp  internal_avx.hpp  intrinutils_avx.hpp
src/tinycv/x86/fma/: bgr_gray_fma.cpp  bgr_i420_fma.cpp  bgr_nv_fma.cpp  internal_fma.hpp  intrinutils_fma.hpp  resize_linear_fp32_fma.cpp  resize_linear_u8_fma.cpp
